fix heading text in myblog.html

--- a/myblog.html
+++ b/myblog.html
@@ -6,10 +6,6 @@
 </head>
 <body>
 <h1>Hello, Everest!</h1>
-
-<span>hdsfdfjdsajdiaeojdaidja
-asdadasasdsa
-asdasdasd
-asdasdsdsa</span>
+<span>hgfhfghfghfhfghfhhgfhfgdre4tetetr</span>
 </body>
 </html>
