fix heading text in myblog.html

--- a/myblog.html
+++ b/myblog.html
@@ -5,6 +5,6 @@
     <title>My mountaineering blog</title>
 </head>
 <body>
-<h1>Hello, Everest!sdfdssdfdsfs</h1>
+<h1>Hello, Everest!</h1>
 </body>
 </html>
